dark-theme: fix selection color making content hard to read

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -11,7 +11,7 @@ $dots-dark: darken($body-color-dark, 50%);
 $link-color-dark: $blue-300;
 $button-color-dark: $link-color-dark;
 $focus-color-dark: lighten($link-color-dark, 2.5%);
-$selection-color-dark: lighten($link-color-dark, 2.5%);
+$selection-color-dark: darken($link-color-dark, 60.5%);
 
 $navbar-dark-color:                 $body-color-dark;
 $navbar-dark-hover-color:           $link-color-dark;
